--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
-scanbd (1.3.1-0rl1) UNRELEASED; urgency=low
+scanbd (1.4.0-1) unstable; urgency=low
 
-  * private release
+  * Initial release (Closes: #695435)
 
  -- Rolf Leggewie <foss@rolf.leggewie.biz>  Thu, 11 Sep 2014 22:22:12 +0800
