--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
-scanbd (1.2.1-0rl1) UNRELEASED; urgency=low
+scanbd (1.3.1-0rl1) UNRELEASED; urgency=low
 
-  * first try with scanbd
+  * private release
 
- -- Rolf Leggewie <foss@rolf.leggewie.biz>  Wed, 13 Jun 2012 12:04:36 +0800
+ -- Rolf Leggewie <foss@rolf.leggewie.biz>  Thu, 11 Sep 2014 22:22:12 +0800
