--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+scanbd (1.4.0-3) experimental; urgency=low
+
+  * scanbuttond: remove config for old, superseded package
+  * control: remove duplicate entry for 'Priority'
+
+ -- Rolf Leggewie <foss@rolf.leggewie.biz>  Tue, 11 Nov 2014 21:10:41 +0800
+
 scanbd (1.4.0-2) unstable; urgency=low
 
   * release to unstable now that 1.4.0-1 has hit testing
