--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+scanbd (1.4.1-3) experimental; urgency=medium
+
+  * configure the backends automatically as much as possible. LP: #1401389
+  * init: actually abort on error, but for now do NOT trigger an actual
+    non-zero error exit code
+
+ -- Rolf Leggewie <foss@rolf.leggewie.biz>  Thu, 26 Feb 2015 11:08:38 +0800
+
 scanbd (1.4.1-2) experimental; urgency=medium
 
   * rules: do not abort the build on 'clobbered' error. LP: #1403831
