--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+scanbd (1.4.1-6) unstable; urgency=medium
+
+  * release to unstable
+  * control:
+    add libdbus-1-dev and pkg-config to build-dependencies. Closes: #790772
+
+ -- Rolf Leggewie <foss@rolf.leggewie.biz>  Thu, 09 Jul 2015 14:39:35 +0900
+
 scanbd (1.4.1-5) experimental; urgency=medium
 
   * postrm: make sure update-inetd is actually present and executable
